--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "protractor": "5.2.0",
     "webdriver-manager": "12.0.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "del-cli": "^1.1.0"
+  },
   "scripts": {
-    "test": "protractor conf.js",
+    "test": "del-cli build && protractor conf.js",
     "postinstall": "webdriver-manager update"
   },
   "engines": {
