--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Protractor tests",
   "main": "conf.js",
   "dependencies": {
+    "jasmine-reporters": "^2.2.1",
     "os": "^0.1.1",
     "protractor": "5.2.0",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
     "webdriver-manager": "12.0.6"
   },
   "devDependencies": {
